--- a/form-modeling/pom.xml
+++ b/form-modeling/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0</version>
   <packaging>kjar</packaging>
   <name>form-modeling</name>
+  <dependencies>
+    <dependency>
+      <groupId>keypartner</groupId>
+      <artifactId>form-modeling-model</artifactId>
+      <version>1.0</version>
+    </dependency>
+  </dependencies>
   <repositories>
     <repository>
       <id>guvnor-m2-repo</id>
