--- a/form-validation-play/pom.xml
+++ b/form-validation-play/pom.xml
@@ -14,6 +14,13 @@
       <url>http://localhost:8080/business-central/maven2/</url>
     </repository>
   </repositories>
+  <dependencies>
+  <dependency>
+			<groupId>com.enel.workbeat</groupId>
+			<artifactId>fat-dto</artifactId>
+			<version>1.3.0-SNAPSHOT</version>
+		</dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
