--- a/form-validation-play/pom.xml
+++ b/form-validation-play/pom.xml
@@ -7,6 +7,10 @@
   <version>1.1</version>
   <packaging>kjar</packaging>
   <name>form-validation-play</name>
+  <properties>
+		<workbeat.common.version>1.4.0-SNAPSHOT</workbeat.common.version>
+		<version.org.brms-bpmsuite>6.4.0.GA-redhat-2</version.org.brms-bpmsuite>
+	</properties>
   <repositories>
     <repository>
       <id>guvnor-m2-repo</id>
@@ -14,12 +18,44 @@
       <url>http://localhost:8080/business-central/maven2/</url>
     </repository>
   </repositories>
+  <dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.jboss.bom.brms</groupId>
+				<artifactId>jboss-brms-bpmsuite-platform-bom</artifactId>
+				<version>${version.org.brms-bpmsuite}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
   <dependencies>
   <dependency>
-			<groupId>com.enel.workbeat</groupId>
-			<artifactId>fat-dto</artifactId>
-			<version>1.3.0-SNAPSHOT</version>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-workitems</artifactId>
+			<scope>provided</scope>
 		</dependency>
+	<dependency>
+		<groupId>com.enel.workbeat</groupId>
+		<artifactId>fat-dto</artifactId>
+		<version>1.3.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+			<groupId>com.enel.workbeat</groupId>
+			<artifactId>common-process</artifactId>
+			<version>${workbeat.common.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.enel.workbeat</groupId>
+			<artifactId>common-dto</artifactId>
+			<version>${workbeat.common.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.enel.workbeat</groupId>
+			<artifactId>common-wih</artifactId>
+			<version>${workbeat.common.version}</version>
+		</dependency>
+		
   </dependencies>
   <build>
     <plugins>
